<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PrankActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/circular_ripple"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/toolbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/params_container"
       >

        <LinearLayout
            android:id="@+id/timer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/sound_start_soon"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/tommy_regular"
                android:text="@string/simple_time_format"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/bg_lottie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/bg_lottie" />

        <RelativeLayout
            android:id="@+id/touch_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circular_bg"
            app:cardBackgroundColor="@color/sky_blue_light_1"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/effect_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/params_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/volume_seekbar_container">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.example.funnypranksounds.spiner.MySpinner
                android:id="@+id/time_spinner"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/spinner_border"
                android:dropDownVerticalOffset="-10dp"
                android:popupBackground="@drawable/spinner_background"
                android:popupElevation="0dp"
                android:spinnerMode="dropdown"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/loop"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_state"
                app:useMaterialThemeColors="false" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/volume_seekbar_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/img_vol_cancel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_vol_cancel" />

        <SeekBar
            android:id="@+id/volume_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/img_vol_plus"
            android:layout_toEndOf="@+id/img_vol_cancel"
            android:maxHeight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:progressDrawable="@drawable/progressdrawable"
            android:thumb="@drawable/seek_thumb" />

        <ImageView
            android:id="@+id/img_vol_plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_vol_plus" />

    </RelativeLayout>

</RelativeLayout>